# prototype-bluetooth

./: Cargo.toml
src/: app_state.rs  feasycom_bluetooth.rs  feasycom_bluetooth_rx.rs  feasycom_bluetooth_tx.rs  feasycom_indication.rs  feasycom_task.rs  fseasycom_bluetooth_rx.rs  fseasycom_bluetooth_tx.rs  main.rs  piicodev_oled.rs
src/feasycom_protocol/: a2dpdev.rs  a2dpstat.rs  avrcpstat.rs  gattdata.rs  gattdev.rs  gattstat.rs  mod.rs  playstat.rs  sppdata.rs  sppdev.rs  sppstat.rs  trackinfo.rs  trackstat.rs
src/feasycom_protocol/command/: mod.rs
src/feasycom_protocol/indication/: mod.rs  trackstat.rs
